# datethyme

./: .envrc  .gitignore  404.html  DEV-NOTES.md  Justfile  README.md  date.html  flake.nix  index.html  lefthook.yaml  lefthook.yml  mkdocs.yml  nonedate.html  nonetime.html  objects.inv  pyproject.toml  requirements.txt  sbom.json  time.html  treefmt.toml  utils_test.py
.github/workflows/: docs.yml  mkdocs.yml  python-publish.yml
_OLD/: Justfile  _null.py  flake.nix  lefthook.yml  nonedate.md  nonedatetime.md  nonetime.md
_OLD/datethyme-OLD/: __init__.py  _abcs.py  _datethyme.py  _null.py  exceptions.py  utils.py
_OLD/docs-OLD/md/: nonedate.md
_OLD/docs-OLD/site/: 404.html  index.html  objects.inv
_OLD/docs-OLD/site/assets/: _mkdocstrings.css
_OLD/docs-OLD/site/conversions/: index.html
_OLD/docs-OLD/site/date/: index.html
_OLD/docs-OLD/site/nulls/: index.html
_OLD/docs-OLD/site/ranges/: index.html
_OLD/docs-OLD/site/spans/: index.html
_OLD/docs-OLD/site/stylesheets/: extra.css
_OLD/docs-OLD/site/time/: index.html
_OLD/nix-OLD/: datethyme.nix  poetry.nix  uv.nix
_OLD/tests-OLD/: date_test.py  daterange_test.py  datetime_ranges_test.py  smoke_test.py  time_test.py
_scheduling_utils/: index.html
date/: index.html
daterange/: index.html
datetime/: index.html
datetimepartition/: index.html
datetimespan/: index.html
dayrangedated/: index.html
docs/md/: _scheduling_utils.md  date.md  daterange.md  datetime.md  datetimepartition.md  datetimespan.md  dayrangedated.md  hourrange.md  hourrangedated.md  index.md  minuterange.md  minuterangedated.md  nonetime.md  scheduleitem.md  scheduling_algorithms.md  secondrange.md  secondrangedated.md  time.md  timedelta.md  timepartition.md  timespan.md  utils.md
docs/old/: conversions.md  date.md  datespan.md  index.md  nulls.md  ranges.md  spans.md  time.md
hourrange/: index.html
hourrangedated/: index.html
minuterange/: index.html
minuterangedated/: index.html
nix/: custom-packages.nix  poetry.nix  python-environments.nix  uv.nix  variables-and-helpers.nix
nonedate/: index.html
nonedatetime/: index.html
nonetime/: index.html
scheduleitem/: index.html
scheduling_algorithms/: index.html
secondrange/: index.html
secondrangedated/: index.html
sketch/: recurring.json  schedule.py  tasks.py
sketch/calendar/: calendar-roundtrip.json  calendar.json
src/datethyme/: __init__.py  __main__.py  _abcs.py  _datethyme.py  _ranges_old.py  _scheduling.py  _scheduling_utils.py  abcs.py  constants.py  core.py  date.py  datetime.py  exceptions.py  extra.py  mutable.py  null.py  protocols.py  stdlib_adapters.py  time.py  utils.py
src/datethyme/dataformats/: __init__.py  html.py  ics.py  jscalendar.py  latex.py  typst.py
src/datethyme/localization/: en.py
src/datethyme/scheduling/: __init__.py  algorithms.py  core.py  display.py  types.py  utils.py
src/datethyme/scheduling/types/: __init__.py  _abcs.py  adapters.py  entries.py  log.py  new_abstract_block.py  partitions.py  routines.py  schedules.py  slots.py  union_type_sketch.py
tests/: date_test.py  time_test.py
tests/acceptance/: schedules.py
tests/smoke/: initialization_test.py  type_hierarchy_test.py
tests/tests-OLD/: OLD_smoke_test.py  OLD_time_test.py  date_test.py  datetime_ranges_test.py  time_ranges_test.py  time_test.py
tests/unit/: _scheduling_utils_test.py  constants_test.py  date_test.py  daterange_test.py  datetime_test.py  datetimepartition_test.py  datetimespan_test.py  dayrangedated_test.py  helpers.py  hourrange_test.py  hourrangedated_test.py  huhu.py  minuterange_test.py  minuterangedated_test.py  nonedate_test.py  nonedatetime_test.py  nonetime_test.py  null_types_test.py  secondrange_test.py  secondrangedated_test.py  time_test.py  timedelta_test.py  timepartition_test.py  timespan_test.py  utils_test.py
tests/unit/scheduling/: algorithms_test.py
time/: index.html
timedelta/: index.html
timepartition/: index.html
timespan/: index.html
utils/: index.html
